--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,3 +17,11 @@
     display: block;
 }
 
+.cabecalho nav{
+    display: flex;
+    width: 60%;
+    height: 100%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    
+}
