--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,6 +22,21 @@
     width: 60%;
     height: 100%;
     justify-content: space-around;
-    flex-wrap: wrap;
-    
+    flex-wrap: wrap;    
+}
+
+.cabecalho a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 4em;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    padding: 20% 0;
+}
+
+/* UTILIZA PSEUDO CLASSES PARA EFEITOS - HOVER */
+
+.cabecalho a:hover{
+    color: #000000;
+    background-color: #fff;
 }
