Inicio da responsividade.

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html{
+    font-size: 70%;
+}
+
 .cabecalho{
     display: flex;
     justify-content: space-between;
@@ -40,3 +44,4 @@
     color: #000000;
     background-color: #fff;
 }
+
